fixed overflow-x

--- a/src/styles/components/_filterbar.scss
+++ b/src/styles/components/_filterbar.scss
@@ -34,6 +34,7 @@
             width: 100%;
             transition: 300ms ease-out;
             overflow-y: scroll;
+            overflow-x: hidden;
             max-height: 200px;
 
             &.active {
